# transcription-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  compose.yml  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml  utils.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: automerge.yml  test.yml  update-dependencies.yml
src/: .gitignore  bot.py  utils.py
src/transcription_bot/: main.py  settings.py  transcribe.py  types.py
src/transcription_bot/file_api/: base_api.py  minio_api.py  policy.py  utils.py
src/transcription_bot/handlers/: cancel.py  download.py  handlers.py  main.py  messages.py  register.py  summary.py  types.py  utils.py
src/transcription_bot/transcribers/: base.py  replicate.py
src/transcription_bot/transcribers/replicate/: base.py  insanely_fast_whisper.py  thomasmol.py
src/transcription_bot/utils/: logger.py
src/transcriptionbot/: main.py
src/transcriptionbot/bot/: __init__.py  credentials.py  handlers.py  model.py  utils.py
tests/: _test_bot.py  conftest.py  helpers.py  test_bot.py  test_utils.py  utils.py
tests/file_api/: test_minio_api.py  test_utils.py
tests/test_files/: long_ogg.srt  long_ogg.txt  short_ogg.srt  short_ogg.txt  video_mp4.srt  video_mp4.txt  video_webm.webm
